# fleet-for-esphome

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  SECURITY.md  mypy.ini  repository.json
deploy/proxmox/scaler/: .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
deploy/proxmox/scaler/deploy/scripts/: README.md  bootstrap-pool.sh  provision-node.sh
deploy/proxmox/scaler/deploy/systemd/: esphome-fleet-proxmox-scaler.service
deploy/proxmox/scaler/deploy/terraform/: README.md  example.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
deploy/proxmox/scaler/esphome_fleet_proxmox_scaler/: __init__.py  __main__.py  config.py  fleet.py  proxmox.py  scaler.py
deploy/proxmox/scaler/tests/: test_config.py  test_fleet.py  test_scaler.py
dev-plans/: PR_GITHUB_SYNC.md  PR_KUBERNETES_DEPLOY.md  PR_PROXMOX_SCALER.md  README.md  RELEASE_CHECKLIST.md  SECURITY_AUDIT.md  UX_REVIEW-1.7.2.md  WORKITEMS-1.7.1.md  WORKITEMS-1.7.2.md  WORKITEMS-1.8.md  WORKITEMS-future.md
ha-addon/: CHANGELOG.md  DOCS.md  Dockerfile  Dockerfile.standalone  VERSION  build.yaml  config.yaml
scripts/: check-invariants.sh  push-to-standalone.sh  refresh-deps.sh  threaddump-addon.sh
tests/: Dockerfile.integration  test_api.py  test_api_contract.py  test_api_firmware_grace.py  test_api_jobs_next.py  test_api_metrics_queue.py  test_client.py  test_device_poller.py  test_disk_usage_sampler_logic.py  test_e2e_client.py  test_esphome_unbundle.py  test_idf_cache_race.py  test_integration_worker_working_logic.py  test_main.py  test_protocol.py  (+4 more)
(+102 files in other folders)
